--- a/java-blog/src/main/resources/static/css/style.css
+++ b/java-blog/src/main/resources/static/css/style.css
@@ -172,22 +172,27 @@ html {
 
 /* ------------------------------------------ */
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     position: relative;
     overflow-x: hidden;
 }
 
 body::before {
     content: "";
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/img/bgBody2.jpg') no-repeat center center / cover;
+    background: url('/img/bgBody6.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
     z-index: -1;
-    opacity: 0.9;
-    pointer-events: none;
 }
 
 main {
@@ -195,7 +200,7 @@ main {
 }
 
 .container-home {
-    max-width: 2000px;
+    max-width: 1500px;
 }
 
 .filter-cat {
@@ -205,8 +210,8 @@ main {
 
 .content-box-article {
     width: 100%;
-    max-width: 2000px;
-    padding: 60px 60px 60px 60px;
+    max-width: 1500px;
+    padding: 60px 30px 60px 30px;
     margin-bottom: 180px;
     background: #2d3a4f7f;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -216,7 +221,7 @@ main {
 }
 
 .row-article {
-    gap: 200px;
+    gap: 150px;
 }
 
 .col-article {
@@ -627,9 +632,21 @@ main {
 
 .carousel {
     width: 100%;
-    max-width: 1250px;
+    height: 100%;
+    max-height: 500px;
+    overflow: hidden;
 }
 
+.carousel-inner {
+    height: 100%; /* Assicura che l'altezza dell'inner del carosello sia quella del carosello */
+}
+
+.carousel-item img {
+    width: 100%;  
+    height: 100%; 
+    object-fit: cover; 
+    object-position: center; 
+}
 .carousel-indicators [data-bs-target] {
     width: 20px;
     height: 20px;
