--- a/java-blog/src/main/resources/templates/dashboard/dash_create.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_create.html
@@ -141,7 +141,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container my-5">
             <div class="content-box-update">
                 <div class="row text-center justify-content-center mx-5">
 
