--- a/java-blog/src/main/resources/templates/dashboard/dash_update.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_update.html
@@ -138,7 +138,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container my-5">
             <div class="content-box-update">
                 <div class="row text-center justify-content-center mx-5">
 
@@ -146,6 +146,7 @@
                         <h1 class="title-color">Edit Post</h1>
                         <form th:action="@{/article/{id}/update(id=${article.id})}" th:object="${article}" method="post"
                             class="stile-form" enctype="multipart/form-data">
+                            <input type="hidden" name="_method" value="PUT">
 
                             <!-- titolo -->
 
