--- a/java-blog/src/main/resources/templates/home/index.html
+++ b/java-blog/src/main/resources/templates/home/index.html
@@ -121,8 +121,12 @@
                       </div>
                       <div class="form-group stile-form">
                         <label for="password">Password</label>
-                        <input type="password" class="form-control input-psw" id="password" name="password"
-                          placeholder="password" required>
+                        <div class="position-relative">
+                          <input type="password" class="form-control input-psw" id="password" name="password"
+                            placeholder="password" required>
+                          <i class="bi bi-eye-slash position-absolute top-50 end-0 translate-middle-y me-3"
+                            id="togglePasswordLogin" style="cursor: pointer; color: black;"></i>
+                        </div>
                       </div>
                       <div th:if="${param.error}">
                         <p class="text-danger">Invalid username or password</p>
@@ -130,7 +134,8 @@
                       <div class="d-flex justify-content-center">
                         <button type="submit"
                           class="d-flex justify-content-center rounded btn btn-outline-custom mt-5 w-60">Sign
-                          in!</button>
+                          in!
+                        </button>
                       </div>
                     </form>
                   </li>
@@ -315,10 +320,6 @@
   </main>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-
   <!-- Modal Registrazione -->
   <div class="modal fade" id="signUpModal" tabindex="-1" aria-labelledby="signUpModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered custom-modal">
@@ -336,11 +337,16 @@
           <div class="modal-body pb-0" id="formContainer">
             <div class="mt-3 fs-3">
               <label for="username" class="form-label">Username</label>
-              <input type="text" class="form-control" id="username" name="username" required />
+              <input type="text" class="form-control" id="username1" name="username" required />
             </div>
-            <div class="mt-3 fs-3 fw-bold">
+            <div class="mt-3 fs-3 fw-bold position-relative">
               <label for="password" class="form-label">Password</label>
-              <input type="password" class="form-control" id="password" name="password" required />
+              <div class="position-relative">
+                <input type="password" class="form-control pe-5" id="password1" name="password" required
+                  autocomplete="off" />
+                <i class="bi bi-eye-slash position-absolute top-50 end-0 translate-middle-y me-3" id="togglePassword"
+                  style="cursor: pointer; color: black;"></i>
+              </div>
             </div>
           </div>
 
@@ -390,56 +396,12 @@
   </div>
 
 
-  <script>
-    document.getElementById('signUpForm').addEventListener('submit', function (e) {
-      e.preventDefault(); // blocca l'invio classico
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-      const formData = new FormData(this);
-
-      fetch(this.getAttribute('action'), {
-        method: 'POST',
-        body: formData
-      })
-        .then(response => {
-          if (response.ok) {
-            // supponiamo che il server restituisca 200 ok per successo
-            showResult(true);
-          } else {
-            // altrimenti errore
-            showResult(false);
-          }
-        })
-        .catch(error => {
-          console.error('Errore di rete:', error);
-          showResult(false);
-        });
-    });
-
-    function showResult(isSuccess) { // Nascondi il form
-      document.getElementById('signUpForm').classList.add('d-none');
-
-      // Mostra il container del messaggio
-      const messageContainer = document.getElementById('messageContainer');
-      messageContainer.classList.remove('d-none');
-
-      // Gestisci GIF e messaggi
-      const statusGif = document.getElementById('statusGif');
-      const successMessage = document.getElementById('successMessage');
-      const errorMessage = document.getElementById('errorMessage');
-
-      if (isSuccess) {
-        statusGif.src = '/img/signUpSuccess.gif'; // GIF successo
-        successMessage.classList.remove('d-none');
-        errorMessage.classList.add('d-none');
-      } else {
-        statusGif.src = '/img/signUpError.gif'; // GIF errore
-        successMessage.classList.add('d-none');
-        errorMessage.classList.remove('d-none');
-      }
-    }
-  </script>
-
-
+  <script src="/js/login.js"></script>
+  <script src="/js/signup.js"></script>
 </body>
 
 </html>
