--- a/java-blog/src/main/resources/templates/dashboard/admin_dash.html
+++ b/java-blog/src/main/resources/templates/dashboard/admin_dash.html
@@ -335,7 +335,8 @@
         });
     </script>
 
-    <script src="/js/scriptDash.js"></script>
+    <script src="/js/postSuccess.js"></script>
+    <script src="/js/inputCat.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
