--- a/java-blog/src/main/resources/templates/home/article-detail.html
+++ b/java-blog/src/main/resources/templates/home/article-detail.html
@@ -199,8 +199,7 @@
                             <img th:src="${#strings.startsWith(article.image, 'uploads/') ? '/' + article.image : '/img/' + article.image}"
                                 alt="Article Image" class="img-show img-fluid mt-1 px-5 d-flex">
                             <div class="d-flex flex-column align-items-start">
-                                <span class="badge badge-cat_inArt mt-2 fs-6"
-                                    th:text="${article.category.name}"></span>
+                                <span class="badge badge-cat_inArt mt-2 fs-6" th:text="${article.category.name}"></span>
                                 <p class="mt-5 fs-3 text-start" th:text="${article.body}"></p>
                             </div>
                         </div>
@@ -218,7 +217,8 @@
                                         class="d-inline">
                                         <button type="submit" class="btn btn-reject">Reject</button>
                                     </form>
-                                    <a class="btn btn-reviewLater d-inline" th:href="@{/dashboard/admin}">Review Later</a>
+                                    <a class="btn btn-reviewLater d-inline" th:href="@{/dashboard/admin}">Review
+                                        Later</a>
                                 </div>
                             </div>
                         </div>
@@ -228,16 +228,9 @@
         </div>
     </main>
 
-
-
-    <footer>
-    </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
