--- a/java-blog/src/main/resources/templates/dashboard/dash_create.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_create.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang=en>
 
-<head>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <script src="/js/scriptPreview.js" defer></script>
-
-    <title>CREATE ARTICOLO</title>
+<head th:replace="~{fragments/head :: siteHead('CREATE ARTICOLO', ~{::extraScripts})}">
+    <th:block th:fragment="extraScripts">
+        <script src="/js/scriptPreview.js" defer></script>
+    </th:block>
 </head>
 
 <body>
@@ -115,8 +108,7 @@
                     <div class="card position-relative" style="border: none;">
 
                         <!-- Immagine -->
-                        <img id="previewImage" src="" alt="Article Image" class="img-fluid"
-                            style="max-height:300px;">
+                        <img id="previewImage" src="" alt="Article Image" class="img-modal">
                         <div class="card-body">
 
                             <!-- Titolo -->
