--- a/java-blog/src/main/resources/templates/dashboard/dash_update.html
+++ b/java-blog/src/main/resources/templates/dashboard/dash_update.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang=en>
 
-<head>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-
-    <title>UPDATE ARTICOLO</title>
-</head>
+<head th:replace="~{fragments/head :: siteHead('UPDATE ARTICOLO', ~{})}"></head>
 
 <body>
 
@@ -92,7 +83,8 @@
                             <!-- salva -->
 
                             <div class="d-flex justify-content-center">
-                                <button class="d-flex justify-content-center rounded btn btn-outline-custom fs-4 mt-5 py-3"
+                                <button
+                                    class="d-flex justify-content-center rounded btn btn-outline-custom fs-4 mt-5 py-3"
                                     type="submit">Update</button>
                             </div>
                         </form>
