--- a/java-blog/src/main/resources/templates/home/article-detail.html
+++ b/java-blog/src/main/resources/templates/home/article-detail.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang=en>
 
-<head>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <title>DETTAGLIO ARTICOLO</title>
-</head>
+<head th:replace="~{fragments/head :: siteHead('READ MORE/SHOW ARTICOLO', ~{})}"></head>
 
 <body>
 
@@ -70,4 +60,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
